# dunder-chess

./: .gitignore  README.md  pyproject.toml
source/: main.py
source/core/: rules.py
source/dunder_chess/: main.py
source/dunder_chess/core/: player.py
source/dunder_chess/models/: board.py  move.py  position.py
source/dunder_chess/ui/: tui.py
source/dunder_chess/utils/: constants.py
source/models/: game.py  piece.py
source/ui/: tui.py
tests/: conftest.py
tests/core/: test_player.py  test_rules.py
tests/models/: test_board.py  test_game.py  test_move.py  test_pieces.py  test_position.py
tests/ui/: test_tui.py
