[project]
name = "dunder-chess"
version = "1.0.0"
description = "A fully functional Python-based two-player terminal chess game."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.12.5",
    "rich>=14.3.3",
    "textual>=8.0.0",
    "typer>=0.24.1",
]

[project.scripts]
dunder-chess = "source.main:app"
__chess__ = "source.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["source"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.4",
    "taskipy>=1.14.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["source"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.taskipy.tasks]
test    = "pytest -v"
test-q  = "pytest -q"
lint    = "ruff check ."
format  = "ruff format ."
check   = "ruff check . && ruff format --check ."
fix     = "ruff check --fix . && ruff format ."
